# python-for-kids

./: 00_template.py  01_basic_drawing.py  02_keyboard_control.py  03_basic_movement.py  04_press_release.py  05_border_control,py  05_border_control.py  06_geometry_awareness.py  07_classes.py  07_sprite_basics.py  08_collision.py  08_gforce.py  09_countdown.py  09_obstacle.py  10_obstacle_spawning.py  10_sprite_basics.py  11_sprite_collision.py  12_sprites_countdown.py  13_maze.py  14_enemy.py  15_slime_animation.py  16_gforce.py  17_gforce_spritesheet.py  22_obstacle.py  23_obstacle_spawning.py  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: attribution.txt
assets/Blue Idle - no slime/: READ ME.txt
docs/: 00_template.md  01_basic_drawing.md  02_keyboard_control.md  03_basic_movement.md  04_press_release.md  05_border_control,py.md  05_border_control.md  06_geometry_awareness.md  07_classes.md  08_collision.md  09_countdown.md  10_sprite_basics.md  11_sprite_collision.md  12_sprites_countdown.md  13_maze.md  14_enemy.md  15_slime_animation.md  21_gforce.md  22_obstacle.md  23_obstacle_spawning.md
tests/: test_02_keyboard_control.py  test_06_geometry_awareness.py  test_08_collision.py  test_09_countdown.py  test_13_maze.py  test_17_gforce_spritesheet.py  test_imports.py
